--- a/main.tex
+++ b/main.tex
@@ -44,7 +44,17 @@
 中国文化研究所所长刘梦溪给我们带来了名为“中国传统文化价值理念的现代意义”的演讲。在讲座中，刘
 老师首先为我们讲述了中国传统文化在不同历史段落中的不同特色，先秦有诸子百家，在百家争鸣的时代，
 产生了大量活跃的思想家，他们的思想涉及到世界观、价值观；秦汉时期，中国的学术思想主要表现为制度
-文化，其中汉代以“经学”作为主要的学术思想，
+文化，其中汉代以“经学”作为主要的学术思想,独尊儒术；到了三国魏晋南北朝时期，『玄学』成为主要学
+术思想；隋唐时期，佛学发展到鼎盛时期；宋代的理学思想可谓集大成者，吸收了前代的各种思想，将中国
+思想推向了一个高峰；王阳明的『心学』是明代的代表思想之一；清代的学术思想主要是考据学，体现朴实
+无华的治学风格。
+
+同时，刘老师强调『六经』是中华传统文化的主轴，『六经』的四个价值理念包括：『敬』，对他人的尊敬，
+自身秉持的精神信仰；『恕』，『己所不欲，勿施于人』；『和』，以和为贵；『耻』，『行己有耻』。这
+四个理念，可以作为中国人为人处世的基本原则。
+
+刘老师指数，中华传统文化中的价值理念永远不会过时，我们要集成并弘扬优秀的价值理念，视之为中华民
+族的宝贵遗产。
 
 \subsection{金融危机与乡村建设}
 中国人民大学温铁军教授给我们带来了名为“金融危机与乡村建设”的演讲。早就耳闻温老师的名字，他在
@@ -71,8 +81,15 @@
 该努力创作，继承发扬中华民族的优秀艺术。
 \subsection{电影创作中的历史观与人性表达}
 著名导演冯小宁带来了名为“电影创作中的历史观与人性表达”的讲座。冯小宁先生是中国第五代导演的杰
-出代表，
+出代表，从事电影创作几十年，自然有极深的体会。
 
+冯老师认为，电影中体现的价值观会很直接地传递给观众，作为创作者，对于电影的价值观传达，自然必须有
+自己的考量。冯老师的作品，很多反映近代的民族历史，有著名的『战争三部曲』，这些作品，并不仅仅停留
+在叙事上，更从独特的视角，为我们展现一个个可歌可泣的民族传说。其背后，体现了对于战争、和平的思考。
+冯小宁老师的电影，往往从民族冲突角度出发表现人性冲突，揭示了人类灵魂的特质。冯老师认为，电影是死
+的，但是创作者是活的。
+
+冯老师认为，只有真正用心去创作电影，观众才会真正地被电影所感染。
 \subsection{深度学习}
 清华大学工程力学系郑泉水教授给我们带来了“精深学习”的精彩演讲。讲座的核心是，如何提高清华学子
 的综合素质与研究创新能力，郑教授以丹尼尔·科伊尔的一万小时天才理论\footnote{该理论认为，要成为
