--- a/main.tex
+++ b/main.tex
@@ -49,11 +49,7 @@
 思想推向了一个高峰；王阳明的『心学』是明代的代表思想之一；清代的学术思想主要是考据学，体现朴实
 无华的治学风格。
 
-同时，刘老师强调『六经』是中华传统文化的主轴，『六经』的四个价值理念包括：『敬』，对他人的尊敬，
-自身秉持的精神信仰；『恕』，『己所不欲，勿施于人』；『和』，以和为贵；『耻』，『行己有耻』。这
-四个理念，可以作为中国人为人处世的基本原则。
-
-刘老师指数，中华传统文化中的价值理念永远不会过时，我们要集成并弘扬优秀的价值理念，视之为中华民
+刘老师指出，中华传统文化中的价值理念永远不会过时，我们要集成并弘扬优秀的价值理念，视之为中华民
 族的宝贵遗产。
 
 \subsection{金融危机与乡村建设}
