--- a/main.tex
+++ b/main.tex
@@ -135,8 +135,83 @@
 \DeclareRobustCommand\CTeX{$\mathbb{C}$\kern-.05em\TeX{}}
 
 \section{心得体会}\label{2}
-\subsection{本构方程的必要性}
+对于X和Y两部分 ，我的感触较深，下面讲一讲我的心得体会。
+\subsection{X}
+目前存在着一个值得深思的矛盾，一方面大学生艾滋病形势严峻，另一方面，高校学生对于艾滋病的认识不够，
+这个矛盾如果不能解决，艾滋病形势将变得越来越不可控。在讲座过后，我对周围同学对于艾滋病的了解程度
+做了一次调查，调查结果显示，有很大一部分同学对于艾滋病的相关知识匮乏，而这部分同学，基本上没有接触
+过艾滋病讲座或其他的科普途径。这一结果，证明了大力开展艾滋病知识科普工作的重要性。
 
+这次讲座让我联想到我之前选修的《卫生与保健》这门课，这门课上给我们仔细讲解了艾滋病知识，但是在课堂
+上，很多同学甚至只是签个到就走，这样的做法又怎么能学到知识？归根到底，还是因为大家觉得艾滋病离自己很远，
+没有危机感。防范工作重在培养危机感，这点不容忽视。
+
+从另一方面，我们要对艾滋病感染者和患者给予平等的态度，由于长期以来人们对艾滋病的偏见，认为艾滋病等价于
+性病，等价于不洁的生活作风，但是事实上很多艾滋病的感染者事出有因，我们需要充分地理解他们，慢慢地扭转他
+们广受歧视的现状。即使是他们之前犯了错而染上了艾滋病，我们也要以善意与热情对待他们，而不是冷漠与歧视。
+
+同时，老师说道，男男传播是大学生艾滋病传播的一条主要途径，这就涉及到一些深层次的伦理问题，矛盾冲突会比较
+激烈，但是我们要敢于直面矛盾，因为生命高于一切。
+
+总的来说，艾滋病的防范需要多方的努力，从教育普及，到社会宣传，再到自身防范，每一环都极为重要。
+
+
+
+
+
+
+\subsection{一带一路--历史视野与现实关照}
+张老师在讲座上强调，一带一路从战略角度影响着世界秩序，每一个时代青年都应该对其有所了解。从政治角
+度讲，只有周边政治稳定时，才能保证贸易的安全进行，从更深的层面理解，一带一路体现了中国的政治理念。
+在讲座结束后，我对『一带一路』进行了调研，对这项战略有了更全面的了解和认识。
+1）消化产能过剩。通过合作投资推动周边国家基础设施建设，支持装备制造业出去，进而推进国内产能过剩行业到资源富集、市
+场需求大的国家建立生产基地。以钢铁过剩大省河北省为例,“一带一路”为河北省的钢铁产业发展带来了新的
+契机。众所周知，河北省的钢铁产量一直稳居全国第一，而“一带一路”带来的基础设施建设对于钢铁需求的巨
+大拉动能力将有效地解决钢铁产能过剩的问题。对此，河北省出台的《关于主动融入国家“一带一路”战略促进
+我省开放发展的意见》，明确鼓励产能过剩的相关企业，到境外建设产生基地，带动各方面的输出。不仅限钢
+铁产业的输出，其他基础建设产业也受益于“一带一路”。例如目前大部分东盟国家和中亚地区工业化程度均不
+高，基础设施较为落后，对铁路、电信、铁路等基础设备的需求量十分巨大。2）获取资源多元化。“一带一路”战略的实施可以帮助降低因过度依赖海上运输而带来潜在供给能力的脆弱性，并且与中亚国家能源
+出口多元化战略在国家利益、技术力量和经济结构方面形成互补，重视与中国开展国际能源合作已成为“丝绸之
+路”沿线国家合作的重要内容。我国新疆与中亚各国在能源与贸易上的互联互通方面进行了大量卓有成效的努力
+，除相继建成中哈石油管道、中国-中亚天然气管道以及第二亚欧大陆桥外，各方还共同成立上海合作组成，中
+国与哈萨克斯坦、乌兹别克斯坦等还建立国家级的经贸合作委员会，在加强能源俄合作方面取得显著的效果。中
+亚各国与中国的能源合作已由原来的顾虑重重，发展到如今能源设备生产、管道运输系统等中下游领域的全面合
+作。3）开拓战略纵深和促进区域平衡发展。加大对西部的开发，解决工业和基础设施集中问题。“一带一路”战略的提出，不仅将西部地区推到改革开放的
+前沿，也是的第二轮西部大开发具有新鲜且充实的内容。对于基础设施、能源产业的建设，将会有效地带动沿线
+各省的建设，在一定程度上对于区域平衡发展有着极大的推动作用。因为“丝绸之路经济带”可以调动区域内能源、
+文化、旅游、工农业等各方面的资源，建立均衡合理的布局，有效地改善长期以来不平衡的高污染低效率经济体系，
+实现完美转型。不仅如此，“一带一路”中的海上丝绸之路，在中国和东南亚国家临海港口城市之间建立有机的连接，
+对于我国沿海港口城市的发展有着至关重要的引导。 4）推动国际区域经济一体化发展。以国际区域经济一体化为主要表现的国际区域经济合作，自20世纪50年代以来在欧盟的示范作用下进行了多种形式
+的实践，20世纪90年代以来更得到迅猛发展，各种形式的区域经济一体化组织纷纷建立。国际区域经济一体化通常
+被理解为，据有一定地缘关系的两个或者两个以上的国家或者地区，通过签订某种条约或协定，拟定共同的行动准
+则和协调一致的政策，形成相互之间协作与支持的经济制度和市场。在世界经济研究中，“国际区域经济一体化”通
+常简称为“区域经济一体化”。从世界经济发展趋势上看，区域经济一体化组织不仅数量越来越多，而且规模也越来
+越大，说明区域经济合作是当今世界经济发展的主流。区域经济合作对世界经济的发展产生深刻影响，促使越来越
+多的国家为谋取更大利益而加入各类区域性经济集团之中。当今国际区域经济合作的发展总体呈现如下两个特点：一是发达国家发展程度高，而发展中国家发展程度低；二是西
+欧及北美洲发展程度高，而亚洲、东欧、南美洲及非洲发展程度低。以德国和法国为主导的欧盟经济圈是当今世界区
+域经济一体化程度最高的经济区。以美国为主导的北美自由贸易区是综合实力最强的经济区。相比之下，大多发展中
+国家面临着来自安达国家主导的区域经济集团的挑战，中国与丝绸之路经济带沿线国家的经济合作在国际上处于滞后
+位置。因此，在国际区域经济合作蓬勃发展的国际背景下，启动并加快丝绸之路经济带建设，对区域经济一体化在全
+球领域发展有重要意义。5）营造多极化趋势下国际经济发展的和平环境。“二战”结束后，世界经济以美国为中心，单极化特征明显。随着20世纪60年代苏联经济实力大幅增强并成为世界第
+二大经济体，世界经济向两极格局演变；70年代后，欧洲共同体继苏联之后恒伟世界经济中的又一极；80年代，日
+本迅速崛起，成为第二经济大国，欧洲共同体进一步壮大，从而引起世界经济格局的又一重大转折；90年代初，随
+着东欧剧变及苏联解体，苏联经济地位大幅降低，世界经济形成美国、日本、西欧三足鼎立的多极格局。进入21世
+纪后，中国经济实力大幅增加，俄罗斯及许多发展中国家经济保持较高增速并成为新兴市场经济体。世界经济发展
+的多极化趋势不断增强。世界经济有一个国家单方面“定夺”世界重要事务，转变为世界各国在多极格局中日益相互
+依赖，相互竞争与相互协调。在错综复杂的多极化格局中，加强国际经济协调成为缓和国际经济冲突，扩大国际合
+作的重要手段，并将对未来各国经济及世界经济的发展产生重大影响。“一带一路”战略所涉及地区为亚欧经济的重要区域，沿线国家的经济协调和合作，对世界经济及自身经济的发展都
+变得日益重要。各经济体发挥各自经济的优势，通过彼此相互开放，形成公平，统一的市场竞争环境，促进各种资源
+的自由流动，调动各类经济主体发展积极性，形成互利共赢的发展模式，形成互联互通，以点带面，从线到片，逐步
+形成大区域大合作的发展格局。显然，“一带一路”战略实施将对全球经济版图长生重大影响，并有利于构建和谐世界发展的世界经济新格局。丝绸之
+路经济带的战略构想尊重区域内各国人民自主选择发展道路的权利，主张通过加强政治沟通和战略互信，营造超越传
+统国家关系模式、文明属性、制度差异、发展差距的新型国家关系，使参与丝绸之路经济带建设的国家成为共同发展、
+共同安全的“好邻居、好伙伴、好朋友”。据此，“一带一路”战略实施有利于搭建灰机世界各国的和谐世界建设平台，
+营造国际经济发展的和平环境。总的来说，从国内层面，“一带一路”战略带来的内需可以有效地解决部分产业的产能过剩问题，并给我国的资源需求
+提供更多更完善的路径，对于“一带”的沿带地区和“一路”的港口城市，将会带来天时地利；从国际层面，“一带一路”
+战略是经济全球化的必然选择，同时是我国在国际上的经济地位的有效保障。不论是近期的经济发展，还是长远的战略价值，“一带一路”都向我们证明了它的价值，“一带一路”继承自古代的“丝绸
+之路”，其背后，还体现着厚重的文化底蕴和人文关怀，是历史的选择，蕴含着我国人民互惠合作的优良传统。我们有
+理由相信，以“一带一路”为代表，中国将肩负越来越重要的国际责任，为构建国际合作的利益、命运和责任共同体而
+继续努力着。
 
 \subsection{$Noll$三原则}
 
@@ -146,7 +221,18 @@
 
 
 \section{课程意见和建议}\label{3}
-
+转眼间，从刚开始参加文化素质讲座的学习到现在，已是好几年了，我忘不了第一次听讲座时的好奇与忐忑，
+忘不了排队等主讲老师的兴奋，更忘不了这三年来，一次次文化素质讲座上老师谈经论道、思想与知识碰撞的火花。
+在我看来，这门课的设立，是我辈之幸，是清华之幸！清华工科气太重了，这也是我们要想成长为世界一流大学必须
+克服的。教书育人，不仅仅要教专业之术，更要培养一个完整的人，这样一个人，必然是需要懂『文化』的。
+通识教育永远不能懈怠，对于清华而言，通识教育的重要性应该是和以『为祖国工作五十年』为口号的体育教育一个
+层次的。
+然而，在执行上，这门课程还存在着一些亟待改进之处。
+1.缺乏有效的监督制度。很多同学往往是讲座开始前去刷卡，然后立刻离开，这种做法必须严格惩罚。
+2.讲座预告中对于讲座内容缺乏足够的介绍，很多时候的预告只有讲座名称和主讲人的信息，没有对于讲座内容较为详细
+的介绍，同学们看到预告比较迷茫。
+3.需要及时的学习反馈。学生在听完讲座后，需要设置作业或者是讨论对讲座内容进行思考与学习，及时地吸收讲座内容。
+多年之后，在清华学习的很多课程我都会忘记，但是我一定将一门课铭记在心，它的名字叫做『文化素质讲座』!
 
 
 \subsection{简单物质的本构方程}
